# ZSOM

./: .gitignore  ARTICLE.md  ARTICLE.pt-br.md  LICENSE  MANIFEST  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: issue.md
.github/workflows/: publish.yml
__docs__/: generate_cover.py  generate_images.py
__docs__/article/: generate_cover.py  render_figures.py
examples/: datasets.py  demo_3d.py  demo_all.py  demo_clusters.py  notebook.ipynb  view_mesh.py  visualization.py
zsom/: __init__.py  __metrics__.py  error_metrics.py  metrics.py  numba_accel.py  som.py
zsom.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
